modular tests: split module | class path if module contains module-info in production only (IDEA-171419)
GitOrigin-RevId: 3dee7b7ac0fa95db1a5952a94eef008b7e409e0d